crates/aranya-policy-compiler/tests/data/enums/undefined_enum_not_defined.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: a thing being referenced is not in scope
  |
2 |     let n = Drink::Coffee
  |             ^^^^^ enum `Drink` not defined
